@@ -1,4 +1,4 @@
-GNU mailutils NEWS -- history of user-visible changes. 2021-08-25
+GNU mailutils NEWS -- history of user-visible changes. 2021-11-13
 See the end of file for copying conditions.
 
 Please send mailutils bug reports to <bug-mailutils@gnu.org>.
@@ -13,6 +13,10 @@ This statement sets timeout in seconds for TLS handshake operations in
 daemons.  Default timeout it 10 seconds.
 
 * Fix idle timeout handling (imap4d and pop3d daemons)
+
+* mail utility
+
+** new command: unread (U)
 
 Version 3.13, 2021-08-05
 
